--- a/apps/templates/admin/apps/application/change_form.html
+++ b/apps/templates/admin/apps/application/change_form.html
@@ -34,13 +34,14 @@
   </ul>
 {% endif %}{% endif %}
 {% endblock %}
+{% if change %}
 <div class="submit-row special">
-    <a href="{% url 'admin:apps_resourcestub_changelist' %}?application__id__exact={{ original.pk }}" class="button">{% translate 'Resources' %}</a>
-    <a href="{% url 'admin:apps_responsestub_changelist' %}?application__id__exact={{ original.pk }}" class="button">{% translate 'Responses' %}</a>
-    <a href="{% url 'admin:apps_requestlog_changelist' %}?application__id__exact={{ original.pk }}" class="button">{% translate 'Logs' %}</a>
+    <a href="{% url 'admin:apps_resourcestub_changelist' %}?application={{ original.pk }}" class="button">{% translate 'Resources' %}</a>
+    <a href="{% url 'admin:apps_responsestub_changelist' %}?application={{ original.pk }}" class="button">{% translate 'Responses' %}</a>
+    <a href="{% url 'admin:apps_requestlog_changelist' %}?application={{ original.pk }}" class="button">{% translate 'Logs' %}</a>
     <p> {{ opts.original.id }} </p>
 </div>
-
+{% endif %}
 <form {% if has_file_field %}enctype="multipart/form-data" {% endif %}{% if form_url %}action="{{ form_url }}" {% endif %}method="post" id="{{ opts.model_name }}_form" novalidate>{% csrf_token %}{% block form_top %}{% endblock %}
 <div>
 {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1">{% endif %}
