--- a/apps/templates/admin/apps/change_form.html
+++ b/apps/templates/admin/apps/change_form.html
@@ -1,5 +1,5 @@
 {% extends "admin/change_form.html" %}
-{% load i18n admin_urls static admin_modify %}
+{% load i18n admin_urls static admin_modify apps%}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
@@ -7,10 +7,26 @@
 &rsaquo; <a href="{% url 'admin:app_list' app_label=opts.app_label %}">{{ opts.app_config.verbose_name }}</a>
 &rsaquo; <a href="{% url 'admin:apps_application_changelist' %}">{% translate 'Applications' %}</a>
 {% if original.application.pk %}
-&rsaquo; <a href="{% url 'admin:apps_application_change' original.application.pk %}">{{ original.application.name }}</a>
+    &rsaquo; <a href="{% url 'admin:apps_application_change' original.application.pk %}">{{ original.application.name }}</a>
+{% elif request.get_full_path|application_id_by_url %}
+    &rsaquo; <a href="{% url 'admin:apps_application_change' request.get_full_path|application_id_by_url %}">{{ request.get_full_path|application_id_by_url|application_name_by_id }}</a>
 {% endif %}
-&rsaquo; {% if has_view_permission %}<a href="{% url opts|admin_urlname:'changelist' %}?application={{ original.application.pk }}">{{ opts.verbose_name_plural|capfirst }}</a>{% else %}{{ opts.verbose_name_plural|capfirst }}{% endif %}
-&rsaquo; {% if add %}{% blocktranslate with name=opts.verbose_name %}Add {{ name }}{% endblocktranslate %}{% else %}{{ original|truncatewords:"18" }}{% endif %}
+&rsaquo;
+    {% if has_view_permission %}
+        {% if original.application.pk %}
+            <a href="{% url opts|admin_urlname:'changelist' %}?application={{ original.application.pk }}">{{ opts.verbose_name_plural|capfirst }}</a>
+        {% elif request.get_full_path|application_id_by_url%}
+            <a href="{% url opts|admin_urlname:'changelist' %}?application={{ request.get_full_path|application_id_by_url }}">{{ opts.verbose_name_plural|capfirst }}</a>
+        {% endif %}
+    {% else %}
+        {{ opts.verbose_name_plural|capfirst }}
+    {% endif %}
+&rsaquo;
+    {% if add %}
+        {% blocktranslate with name=opts.verbose_name %}Add {{ name }}{% endblocktranslate %}
+    {% else %}
+        {{ original|truncatewords:"18" }}
+    {% endif %}
 </div>
 {% endblock %}
 
