--- a/apps/static/admin/css/seti.css
+++ b/apps/static/admin/css/seti.css
@@ -1,8 +1,7 @@
 /*
 
-    Name:       seti
-    Author of original modification:     Michael Kaminsky (http://github.com/mkaminsky11)
-
+    Based on Codemirror's seti theme.
+    Author of Codemirror's modification: Michael Kaminsky (http://github.com/mkaminsky11)
     Original seti color scheme by Jesse Weed (https://github.com/jesseweed/seti-syntax)
 
 */
@@ -24,7 +23,7 @@
 .cm-s-seti .CodeMirror-line::selection, .cm-s-seti .CodeMirror-line > span::selection, .cm-s-seti .CodeMirror-line > span > span::selection { background: rgba(255, 255, 255, 0.10); }
 .cm-s-seti .CodeMirror-line::-moz-selection, .cm-s-seti .CodeMirror-line > span::-moz-selection, .cm-s-seti .CodeMirror-line > span > span::-moz-selection { background: rgba(255, 255, 255, 0.10); }
 .cm-s-seti span.cm-comment { color: #41535b; }
-.cm-s-seti span.cm-string, .cm-s-seti span.cm-string-2 { color: #55b5db; }
+.cm-s-seti span.cm-string, .cm-s-seti span.cm-string-2 { color: #2aa198; }
 .cm-s-seti span.cm-number { color: #cd3f45; }
 .cm-s-seti span.cm-variable { color: #55b5db; }
 .cm-s-seti span.cm-variable-2 { color: #a074c4; }
@@ -37,7 +36,7 @@
 .cm-s-seti span.cm-tag { color: #55b5db; }
 .cm-s-seti span.cm-attribute { color: #9fca56; }
 .cm-s-seti span.cm-qualifier { color: #9fca56; }
-.cm-s-seti span.cm-property { color: #a074c4; }
+.cm-s-seti span.cm-property { color: #268bd2; }
 .cm-s-seti span.cm-variable-3, .cm-s-seti span.cm-type { color: #9fca56; }
 .cm-s-seti span.cm-builtin { color: #9fca56; }
 .cm-s-seti .CodeMirror-activeline-background { background: #101213; }
