Sonar warnings fixed.

--- a/apps/templates/admin/base_site.html
+++ b/apps/templates/admin/base_site.html
@@ -7,7 +7,7 @@
 
     <h1 id="site-name">
         <a href="{% url 'admin:index' %}">
-            <img src="{% static 'admin/img/logo.png' %}" height="40px" />
+            <img src="{% static 'admin/img/logo.png' %}" height="40px" alt="Logo"/>
             {{ site_header|default:_('Django administration') }}
         </a>
     </h1>
