Added a basic export button. Fixed application exporting.

--- a/apps/templates/admin/apps/application/change_form.html
+++ b/apps/templates/admin/apps/application/change_form.html
@@ -34,6 +34,9 @@
   </ul>
 {% endif %}{% endif %}
 {% endblock %}
+<div class="button-box box1">
+    <a href="{% url 'apps:export' id=original.pk %}" class="button">{% translate 'Export to file' %}</a>
+</div>
 {% if change %}
 <div class="menu">
 <div class="application-menu">
