--- a/apps/templates/admin/apps/application/change_form.html
+++ b/apps/templates/admin/apps/application/change_form.html
@@ -28,15 +28,18 @@
 {% block object-tools %}
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
-    {% block object-tools-items %}
-      {% change_form_object_tools %}
-    {% endblock %}
+      {% block object-tools-items %}
+        <li class="actions">
+            {% url opts|admin_urlname:'history' original.pk|admin_urlquote as history_url %}
+            <a href="{% url 'apps:export' id=original.pk %}" class="link button">{% translate 'Export to file' %}</a>
+            <a href="{% add_preserved_filters history_url %}" class="historylink button">{% translate 'History' %}</a>
+        </li>
+        {% if has_absolute_url %}<li><a href="{{ absolute_url }}" class="viewsitelink">{% translate "View on site" %}</a></li>{% endif %}
+      {% endblock %}
   </ul>
 {% endif %}{% endif %}
 {% endblock %}
-<div class="button-box box1">
-    <a href="{% url 'apps:export' id=original.pk %}" class="button">{% translate 'Export to file' %}</a>
-</div>
+
 {% if change %}
 <div class="menu">
 <div class="application-menu">
