--- a/apps/templates/admin/apps/application/change_list.html
+++ b/apps/templates/admin/apps/application/change_list.html
@@ -4,12 +4,12 @@
 
 {% block object-tools-items %}
   {% if has_add_permission %}
-  <ul>
-      <li class="actions">
+<div class="actions">
+    <div class="admin-btn" onclick="document.getElementById('file-btn').click()">
+        {% translate 'Import from file' %}
+    </div>
+    <li class="actions">
         {% url cl.opts|admin_urlname:'add' as add_url %}
-        <a href="#" class="link button" onclick="document.getElementById('file-btn').click()">
-            {% translate 'Import from file' %}
-        </a>
         <a href="{% add_with_filter add_url %}" class="addlink button">
           {% blocktranslate with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktranslate %}
         </a>
@@ -17,8 +17,8 @@
             {% csrf_token %}
             <input id="file-btn" type="file" name="file"/>
         </form>
-      </li>
-  </ul>
+    </li>
+</div>
   {% endif %}
 {% if request.get_full_path|application_id_by_url %}
 <ul>
