--- a/apps/templates/admin/apps/application/change_list.html
+++ b/apps/templates/admin/apps/application/change_list.html
@@ -4,20 +4,22 @@
 
 {% block object-tools-items %}
   {% if has_add_permission %}
-<div class="actions">
-    <div class="admin-btn" onclick="document.getElementById('file-btn').click()">
+<div class="actions" xmlns="http://www.w3.org/1999/html">
+    <ul>
+        <li class="admin-btn" onclick="document.getElementById('file-btn').click()">
         {% translate 'Import from file' %}
-    </div>
-    <li class="actions">
-        {% url cl.opts|admin_urlname:'add' as add_url %}
-        <a href="{% add_with_filter add_url %}" class="addlink button">
-          {% blocktranslate with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktranslate %}
-        </a>
-        <form class="hidden" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <input id="file-btn" type="file" name="file"/>
-        </form>
-    </li>
+        </li>
+        <li class="actions">
+            {% url cl.opts|admin_urlname:'add' as add_url %}
+            <a href="{% add_with_filter add_url %}" class="addlink button">
+              {% blocktranslate with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktranslate %}
+            </a>
+            <form class="hidden" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input id="file-btn" type="file" name="file"/>
+            </form>
+        </li>
+    </ul>
 </div>
   {% endif %}
 {% if request.get_full_path|application_id_by_url %}
