--- a/apps/static/admin/css/application.css
+++ b/apps/static/admin/css/application.css
@@ -61,16 +61,15 @@ fieldset.module:nth-child(5) > h2:nth-child(1) {
 }
 
 .admin-btn {
-    display: block;
-    float: left;
+    height: 20px !important;
     background: var(--object-tools-bg);
     color: var(--object-tools-fg);
     font-weight: 400;
-    font-size: 12px;
+    font-size: 11px;
     text-transform: uppercase;
     letter-spacing: 0.5px;
-    padding: 6px;
-    margin-top: 5px;
+    padding: 3px 12px;
+    margin: 6px 5px 5px 5px;
     border: 1px solid var(--border-color);
     border-radius: 4px;
 }
