Fixed styles for import app button. (#94)

--- a/apps/static/admin/css/application.css
+++ b/apps/static/admin/css/application.css
@@ -59,3 +59,17 @@ fieldset.module:nth-child(5) > h2:nth-child(1) {
 .column-get_is_enabled {
     width: 5px;
 }
+
+.admin-btn {
+    height: 20px !important;
+    background: var(--object-tools-bg);
+    color: var(--object-tools-fg);
+    font-weight: 400;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    padding: 3px 12px;
+    margin: 6px 5px 5px;
+    border: 1px solid var(--border-color);
+    border-radius: 4px;
+}
