--- a/apps/templates/admin/apps/application/change_list.html
+++ b/apps/templates/admin/apps/application/change_list.html
@@ -4,21 +4,23 @@
 
 {% block object-tools-items %}
   {% if has_add_permission %}
-  <ul>
-      <li class="actions">
-        {% url cl.opts|admin_urlname:'add' as add_url %}
-        <a href="#" class="link button" onclick="document.getElementById('file-btn').click()">
-            {% translate 'Import from file' %}
-        </a>
-        <a href="{% add_with_filter add_url %}" class="addlink button">
-          {% blocktranslate with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktranslate %}
-        </a>
-        <form class="hidden" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <input id="file-btn" type="file" name="file"/>
-        </form>
-      </li>
-  </ul>
+<div class="actions" xmlns="http://www.w3.org/1999/html">
+    <ul>
+        <li class="admin-btn" onclick="document.getElementById('file-btn').click()">
+        {% translate 'Import from file' %}
+        </li>
+        <li class="actions">
+            {% url cl.opts|admin_urlname:'add' as add_url %}
+            <a href="{% add_with_filter add_url %}" class="addlink button">
+              {% blocktranslate with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktranslate %}
+            </a>
+            <form class="hidden" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input id="file-btn" type="file" name="file"/>
+            </form>
+        </li>
+    </ul>
+</div>
   {% endif %}
 {% if request.get_full_path|application_id_by_url %}
 <ul>
